--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,12 @@
 /*  your css code here. If applicable */
+		main{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        ul{
+            list-style-type:square
+        }
+        .container{
+            border-bottom: 1px solid gray;
+        }
