--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,24 @@
-/*  your css code here. If applicable */
-		main{
+		body{
+            margin: 0%;
+        }
+        main{
+            padding: 0;
+            margin: 0;
             display: flex;
             justify-content: center;
             align-items: center;
         }
-        ul{
-            list-style-type:square
+        #band{
+            padding: 0;
+            margin: 0;
+            border: 20px solid rgba(128, 128, 128,0.2);
+            border-top: 0;
         }
-        .container{
-            border-bottom: 1px solid gray;
+        li{
+            padding: 20px;
+            list-style-type:square;
+            list-style-position: inside;
+            border: solid rgba(128, 128, 128,0.5);;
+            border-width: 0px 1px 1px 1px ;
+            
         }
