--- a/styles.css
+++ b/styles.css
@@ -8,17 +8,18 @@
             justify-content: center;
             align-items: center;
         }
-        #band{
+        #bands{
             padding: 0;
             margin: 0;
-            border: 20px solid rgba(128, 128, 128,0.2);
+            border:20px solid rgba(128, 128, 128,0.2);
             border-top: 0;
+			border-bottom: 0;
         }
         li{
             padding: 20px;
             list-style-type:square;
             list-style-position: inside;
-            border: solid rgba(128, 128, 128,0.5);;
+            border: solid rgba(128, 128, 128,0.5);
             border-width: 0px 1px 1px 1px ;
-            
+		}
         }
